--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -28,10 +28,15 @@ jobs:
       - name: Run scraper
         run: python main.py
 
+      - name: Check for new jobs and send email
+        env:
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+        run: python job_notifier.py
+
       - name: Commit and push if changed
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add jobs.json
-          git diff --staged --quiet || git commit -m "Update jobs.json [skip ci]"
+          git add jobs.json seen_jobs.json
+          git diff --staged --quiet || git commit -m "Update jobs [skip ci]"
           git push
